# shellforgepy

./: .gitignore  AGENTS.md  CONTRIBUTING.rst  DECLARATIVE_COMPOSITE_ASSEMBLIES.md  PREVIEW_RENDERER_CONCEPT.md  README.md  README.rst  README_BUILDER.md  README_SLICER_INTEGRATION.md  freecad_python.sh  precommit.sh  setup.cfg  setup.py  test_in_docker.sh
.github/workflows/: publish-to-pypi.yml
devtools/: regenerate_imports.py
docs/: carpyccio_concept.md  conf.py  index.rst
examples/: README.md  builder_machine_example.py  colored_export_example.py  create_cylinder_stl.py  create_face_stl.py  create_trapezoidal_snake_stl.py  face_v6_shellforgepy.py  filleted_boxes_example.py  obj_export_example.py  polygon_inset_demo.py  process_and_workflow.py
examples/builder_machine_demo/: assemblies.yaml  guide_column.yaml  machine_base.yaml  spindle_head.yaml
examples/example_settings_master/: FilamentPETGExample.yaml  FilamentPLAExample.yaml  example_process.yaml
src/shellforgepy/: __main__.py  metrics.py  simple.py  skeleton.py
src/shellforgepy/adapters/: _adapter.py  _adapter_bridge.py  adapter_chooser.py  font_resolver.py  simple.py
src/shellforgepy/adapters/cadquery/: cadquery_adapter.py
src/shellforgepy/adapters/freecad/: freecad_adapter.py  freecad_python.FCMacro
src/shellforgepy/adapters/occ/: __init__.py  occ_adapter.py
src/shellforgepy/architecture/: __init__.py  plan_render.py  polygon_clipping.py  semantic_storey.py  storey.py  storey_builder.py
src/shellforgepy/builder/: __init__.py  builder.py  errors.py  graph_model.py
src/shellforgepy/construct/: alignment.py  alignment_operations.py  construct_utils.py  leader_followers_cutters_part.py  leaders_followers_cutters_part.py  named_part.py  polygon_spec.py  step_serialization.py
src/shellforgepy/geometry/: __init__.py  dovetails.py  face_point_cloud.py  higher_order_solids.py  keepouts.py  m_screws.py  mesh_utils.py  modifications.py  spherical_tools.py  treapezoidal_snake_geometry.py  vector_text.py
src/shellforgepy/produce/: arrange_and_export.py  mesh_scene.py  obj_file_export.py  production_parts_model.py
src/shellforgepy/render/: __init__.py  api.py  image.py  model.py  obj_loader.py  presets.py  rasterizer.py
src/shellforgepy/shells/: connector_hint.py  connector_utils.py  materialized_connectors.py  mesh_partition.py  partitionable_spheroid_triangle_mesh.py  paths.py  transformed_region_view.py
src/shellforgepy/slicing/: orca_slicer_settings_generator.py
src/shellforgepy/workflow/: upload_to_printer.py  workflow.py
tests/: conftest.py  test_skeleton.py
tests/unit/: test_architecture_storey.py  test_arrange_and_export.py  test_builder.py  test_materialized_connectors.py  test_metrics.py  test_orca_slicer_settings_generator.py  test_upload_to_printer.py  test_workflow.py
tests/unit/adapters/: test_adapter_generic.py
tests/unit/adapters/cadquery/: test_cadquery_arrange_and_export.py  test_cadquery_basic_transformations.py  test_cadquery_edge_filtering.py  test_cadquery_expand.py  test_cadquery_export_import.py  test_cadquery_objects_creation.py  test_obj_export.py
tests/unit/adapters/freecad/: test_debug_transforms.py  test_freecad_arrange_and_export.py  test_freecad_basic_transformations.py  test_freecad_edge_filtering.py  test_freecad_expand.py  test_freecad_objects_creation.py
tests/unit/construct/: test_alignment_operations.py  test_comprehensive_leader_followers_cutters.py  test_leader_followers_cutters.py  test_leader_followers_cutters_comprehensive.py  test_leader_followers_cutters_reset_orientation.py  test_leaders_followers_cutters.py  test_leaders_followers_cutters_comprehensive.py  test_named_part.py  test_part_parameters.py  test_step_serialization.py
tests/unit/construct_lib/: test_connector_utils.py  test_construct_utils.py  test_geometries.py  test_mesh_partition.py  test_mesh_partition_complex_perforations.py  test_mesh_partition_polygon_projection.py  test_mesh_utils.py  test_partitionable_spheroid_triangle_mesh.py  test_polygon_perforation.py  test_polygon_perforation_low_level.py  test_polygon_spec.py  test_spherical_tools.py  test_transformed_region_view.py  test_trapezoidal_snake_geometry.py
tests/unit/geometry/: test_dovetails.py  test_face_point_cloud.py  test_higher_order_solids.py  test_keepouts.py  test_m_screws.py  test_modifications.py  test_screw_thread_fixed.py  test_vector_text.py
tests/unit/render/: test_api.py
tools/: fix_imports.py  import_fixer.py  new_part_file.py  new_part_file.sh
