# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = shellforgepy
description = Python tooling for backend-agnostic 3D modeling and fabrication
author = Markus Emmenegger
author_email = markus.emmenegger@poemai.ch
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/m-emm/shellforgepy
# Add here related links, for example:
project_urls =
    Documentation = https://github.com/m-emm/shellforgepy/blob/main/README.md
    Source = https://github.com/m-emm/shellforgepy
    Changelog = https://github.com/m-emm/shellforgepy/blob/main/CHANGELOG.md
    Tracker = https://github.com/m-emm/shellforgepy/issues
    Examples = https://github.com/m-emm/shellforgepy/tree/main/examples

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Intended Audience :: Developers
    Intended Audience :: Manufacturing
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.11

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    numpy
    scipy
    networkx


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Optional install groups. Examples:
#   pip install shellforgepy[cadquery]
#   pip install shellforgepy[freecad]
#   pip install shellforgepy[all]

cadquery =
    cadquery>=2.4

# FreeCAD is typically installed via system/package manager or the official app bundle.
# This extra intentionally has no PyPI dependencies; it just enables the code paths.
freecad =

all =
    cadquery>=2.4

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = shellforgepy.module:function
# For example:
# console_scripts =
#     fibonacci = shellforgepy.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
# addopts =
#     --cov shellforgepy --cov-report term-missing
#     --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.6
package = shellforgepy

# Uncomment the following section to include additional files in your package
[options.package_data]
# shellforgepy =
#    example_file1.txt
#    example_file2.yaml
